# hsi-gradient-cuda

./: CMakeLists.txt  README.md  gm_di_zenzo.cu  gm_frobenius.cu  gm_gray_sum.cu  gm_morph_abs_area.cu  gm_morph_abs_area_sq.cu  gm_morph_area.cu  gm_morph_area_sq.cu  gm_morph_euc.cu  gm_morph_max.cu  gm_morph_sum.cu  gm_sapiro.cu  main.cu
